refactor(project): Cleanup, IDE inspection fixes